Bug 154939 - PDF/UA Image with hyperlink results in ""Link" annotation is not nested inside a "Link" structure element" in PAC
Summary: PDF/UA Image with hyperlink results in ""Link" annotation is not nested insid...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-04-20 15:16 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-19 11:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (24.36 KB, application/vnd.oasis.opendocument.text)
2023-04-20 15:16 UTC, Gabor Kelemen (Collabora)
Details
The example file exported to PDF (35.79 KB, application/pdf)
2023-04-20 15:17 UTC, Gabor Kelemen (Collabora)
Details
The example file exported to PDF in PAC tool (149.23 KB, image/png)
2023-04-20 15:18 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-20 15:16:56 UTC
Created attachment 186817 [details]
Example file from Writer

Attached example file contains an image with a hyperlink and description.
When saved as PDF/UA the PAC 3 tool gives an error: "Link" annotation is not nested inside a "Link" structure element

The PDF/UA standard says this about this situation:

Graphics objects, other than text objects, shall be tagged with a Figure tag as described in
ISO 32000-1:2008, 14.8.4.5, Table 340. If any of the following exceptions are true, then the graphic shall
be tagged as an artifact:
? the graphic does not represent meaningful content, or
? the graphic appears as a background to a link annotation, in which case, the alternative text on the
link shall describe both the graphic and the link.

1. Open attached file
2. Save as PDF, with PDF/UA enabled
3. Open the resulting file in the PAC 3 tool.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-04-20 15:17:18 UTC
Created attachment 186818 [details]
The example file exported to PDF
Comment 2 Gabor Kelemen (Collabora) 2023-04-20 15:18:29 UTC
Created attachment 186819 [details]
The example file exported to PDF in PAC tool
Comment 3 Dieter 2023-05-06 15:16:26 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69d0be09ad81935f7da4b6f8d036c3562357d068
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded
Comment 4 Commit Notification 2023-07-11 09:10:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f2d5653a6792a19e9a45d34ac9dce22e717b8cbf

tdf#154939 sw: PDF/UA export: produce Link StructElem inside Figure

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2023-07-11 09:16:16 UTC
fixed on master
Comment 6 Commit Notification 2023-08-02 11:01:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/56229692918505efcc5d466901e7f1123de45a66

tdf#154939 sw: PDF/UA export: produce Link StructElem inside Figure

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2023-08-19 11:55:12 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34d32740d89876c3d4fd2743a07d6e2578601683
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Michael, thanks for fixing it!