tdf#154939 sw: PDF/UA export: produce Link StructElem inside Figure

... for a fly frame with a hyperlink set.

  Specification: ISO 14289-1:2014, Clause: 7.18.5, Test number: 1
  Links shall be tagged according to ISO 32000-1:2008, 14.8.4.4.2, Link Element.
  A Link annotation is nested within null tag instead of Link

Change-Id: I7a2bef8d6100adffb1f40085bba8f18fc68bd8d4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154280
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>